--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="+ Oportunidades"
+      content="Plataforma de intermediação exclusiva para a comunidade LGBTQ+."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    
-    <link href="//db.onlinewebfonts.com/c/f72b1d468cfaae873bfc1550df0a0f9c?family=Helvetica+Narrow+CE" rel="stylesheet" type="text/css"/>
-    <link href="//db.onlinewebfonts.com/c/219474fc098b72498d257704436d49f7?family=Helvetica" rel="stylesheet" type="text/css"/>
     <title>+ Oportunidades</title>
   </head>
 
